Add a workspace Cargo.toml

--- a/rustest-macro/Cargo.toml
+++ b/rustest-macro/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "rustest-macro"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [lib]
 proc-macro = true
