--- a/rustest/Cargo.toml
+++ b/rustest/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "rustest"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [dependencies]
 libtest-mimic = "0.8.1"
