fixup! Add tests on rustest.

--- a/rustest/Cargo.toml
+++ b/rustest/Cargo.toml
@@ -10,3 +10,7 @@ homepage.workspace = true
 [dependencies]
 libtest-mimic = "0.8.1"
 rustest-macro = { version = "0.1.0", path = "../rustest-macro" }
+
+[[test]]
+name = "test"
+harness = false
