--- a/rustest-macro/Cargo.toml
+++ b/rustest-macro/Cargo.toml
@@ -6,6 +6,9 @@ edition.workspace = true
 repository.workspace = true
 license.workspace = true
 homepage.workspace = true
+description.workspace = true
+categories.workspace = true
+keywords.workspace = true
 
 [lib]
 proc-macro = true
