--- a/rustest/Cargo.toml
+++ b/rustest/Cargo.toml
@@ -6,6 +6,9 @@ edition.workspace = true
 repository.workspace = true
 license.workspace = true
 homepage.workspace = true
+description.workspace = true
+categories.workspace = true
+keywords.workspace = true
 
 [dependencies]
 libtest-mimic = "0.8.1"
