Fix repository and homepage metdata.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ resolver = "2"
 edition = "2024"
 version = "0.0.1"
 authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
-repository = "https://github.com/kymeria/rustest"
-homepage = "https://github.com/kymeria/rustest"
+repository = "https://github.com/mgautierfr/rustest"
+homepage = "https://github.com/mgautierfr/rustest"
 license = "MIT OR Apache-2.0"
 description = "Better test your program."
 keywords = ["test", "fixture", "harness", "dev-dependencies", "test-fixtures"]
