--- a/rustest-macro/Cargo.toml
+++ b/rustest-macro/Cargo.toml
@@ -16,7 +16,6 @@ test = false
 doctest = false
 
 [dependencies]
-darling = "0.20.10"
-proc-macro2 = "1.0.94"
+proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
 quote = "1.0.40"
 syn = { version = "2.0.100", features = ["full"] }
