Use ctor crate to register our test generators.
The previous version, storing function name in a vec in rustest-macro was
working only for tests not in a sub-module.

We need to register tests whereever they are. Using a `ctor` register run
before main allow us to fill `TEST_GENERATORS` at runtime, before main.

--- a/rustest/Cargo.toml
+++ b/rustest/Cargo.toml
@@ -11,6 +11,7 @@ categories.workspace = true
 keywords.workspace = true
 
 [dependencies]
+ctor = { version = "0.4.1", features = ["__no_warn_on_missing_unsafe"] }
 libtest-mimic = "0.8.1"
 rustest-macro = { version = "0.1.0", path = "../rustest-macro" }
 
