--- a/rustest-macro/Cargo.toml
+++ b/rustest-macro/Cargo.toml
@@ -16,4 +16,4 @@ proc-macro = true
 [dependencies]
 proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
 quote = "1.0.40"
-syn = { version = "2.0.100", features = ["full"] }
+syn = { version = "2.0.100", features = ["full", "extra-traits"] }
