--- a/rustest/Cargo.toml
+++ b/rustest/Cargo.toml
@@ -12,8 +12,12 @@ keywords.workspace = true
 
 [dependencies]
 ctor = { version = "0.4.1", features = ["__no_warn_on_missing_unsafe"] }
+googletest = { version = "0.14.0", optional = true }
 libtest-mimic = "0.8.1"
 rustest-macro = { version = "0.1.0", path = "../rustest-macro" }
+
+[features]
+googletest = ["dep:googletest"]
 
 [[test]]
 name = "test"
