Add new testing crate to test rustest from an external crate.
`rustest-testing` is not intended to be published.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["rustest", "rustest-macro"]
+members = ["rustest", "rustest-macro", "rustest-testing"]
 resolver = "2"
 
 [workspace.package]
