Make clippy happy and run it in the CI on tests too.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
 
       - name: Run clippy
         if: ${{ matrix.toolchain == 'stable' }}
-        run: cargo clippy
+        run: |
+          cargo clippy --all
+          cargo clippy --tests
 
       - name: Run audit
         run: cargo audit
